1. 모바일 메인 2. 검색창 3. 폴더구조 정리

--- a/pages/pc/cart.html
+++ b/pages/pc/cart.html
@@ -7,9 +7,10 @@
     <title>장바구니 - e-Club</title>
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
-    <link href="../assets/styles/pc.css" rel="stylesheet">
-    <script src="../assets/js/main.js"></script>
-    <script src="../assets/js/components/checkbox.js"></script>
+    <link href="/assets/styles/pc.css" rel="stylesheet">
+    <script src="/assets/js/components/quantity-control.js"></script>
+    <script src="/assets/js/main.js"></script>
+    <script src="/assets/js/components/checkbox.js"></script>
 </head>
 
 <body>
@@ -141,7 +142,7 @@
                             </div>
 
                             <div class="item-image">
-                                <img src="../assets/images/cart/Product Image.png" alt="에비앙 500ml"
+                                <img src="/assets/images/cart/Product Image.png" alt="에비앙 500ml"
                                     onerror="this.src='https://via.placeholder.com/150x150?text=Evian'">
                             </div>
 
@@ -267,7 +268,7 @@
                             </div>
 
                             <div class="item-image">
-                                <img src="../assets/images/cart/Product Image-1.png" alt="애경 엑츠"
+                                <img src="/assets/images/cart/Product Image-1.png" alt="애경 엑츠"
                                     onerror="this.src='https://via.placeholder.com/150x150?text=Actz'">
                             </div>
 
@@ -378,7 +379,7 @@
                             </div>
 
                             <div class="item-image">
-                                <img src="../assets/images/cart/Product Image.png" alt="에비앙 500ml"
+                                <img src="/assets/images/cart/Product Image.png" alt="에비앙 500ml"
                                     onerror="this.src='https://via.placeholder.com/150x150?text=Evian'">
                             </div>
 
@@ -504,7 +505,7 @@
                             </div>
 
                             <div class="item-image">
-                                <img src="../assets/images/cart/Product Image-1.png" alt="애경 엑츠"
+                                <img src="/assets/images/cart/Product Image-1.png" alt="애경 엑츠"
                                     onerror="this.src='https://via.placeholder.com/150x150?text=Actz'">
                             </div>
 
@@ -626,7 +627,7 @@
                             </div>
 
                             <div class="item-image">
-                                <img src="../assets/images/cart/Product Image.png" alt="에비앙 500ml"
+                                <img src="/assets/images/cart/Product Image.png" alt="에비앙 500ml"
                                     onerror="this.src='https://via.placeholder.com/150x150?text=Evian'">
                             </div>
 
@@ -753,7 +754,7 @@
                             </div>
 
                             <div class="item-image">
-                                <img src="../assets/images/cart/Product Image-1.png" alt="애경 엑츠"
+                                <img src="/assets/images/cart/Product Image-1.png" alt="애경 엑츠"
                                     onerror="this.src='https://via.placeholder.com/150x150?text=Actz'">
                             </div>
 
@@ -874,7 +875,7 @@
                             </div>
 
                             <div class="item-image">
-                                <img src="../assets/images/cart/Product Image.png" alt="에비앙 500ml"
+                                <img src="/assets/images/cart/Product Image.png" alt="에비앙 500ml"
                                     onerror="this.src='https://via.placeholder.com/150x150?text=Evian'">
                             </div>
 
@@ -1001,7 +1002,7 @@
                             </div>
 
                             <div class="item-image">
-                                <img src="../assets/images/cart/Product Image-1.png" alt="애경 엑츠"
+                                <img src="/assets/images/cart/Product Image-1.png" alt="애경 엑츠"
                                     onerror="this.src='https://via.placeholder.com/150x150?text=Actz'">
                             </div>
 
@@ -1120,7 +1121,7 @@
                             </div>
 
                             <div class="item-image">
-                                <img src="../assets/images/cart/Product Image.png" alt="에비앙 500ml"
+                                <img src="/assets/images/cart/Product Image.png" alt="에비앙 500ml"
                                     onerror="this.src='https://via.placeholder.com/150x150?text=Evian'">
                             </div>
 
@@ -1247,7 +1248,7 @@
                             </div>
 
                             <div class="item-image">
-                                <img src="../assets/images/cart/Product Image-1.png" alt="애경 엑츠"
+                                <img src="/assets/images/cart/Product Image-1.png" alt="애경 엑츠"
                                     onerror="this.src='https://via.placeholder.com/150x150?text=Actz'">
                             </div>
 
