--- a/pages/pc/search_result.html
+++ b/pages/pc/search_result.html
@@ -7,11 +7,12 @@
     <title>검색결과 - e-Club</title>
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
-    <link href="../assets/styles/pc.css" rel="stylesheet">
-    <script src="../assets/js/main.js"></script>
-    <script src="../assets/js/pages/search_result.js"></script>
-    <script src="../assets/js/components/view-toggle.js"></script>
-    <script src="../assets/js/components/checkbox.js"></script>
+    <link href="/assets/styles/pc.css" rel="stylesheet">
+    <script src="/assets/js/components/quantity-control.js"></script>
+    <script src="/assets/js/main.js"></script>
+    <script src="/assets/js/pages/search_result.js"></script>
+    <script src="/assets/js/components/view-toggle.js"></script>
+    <script src="/assets/js/components/checkbox.js"></script>
 </head>
 
 <body>
