1. 모바일 메인 수정 2.

--- a/index.html
+++ b/index.html
@@ -4970,7 +4970,13 @@
                                             <a href="#" class="card-thumb">
                                                 <img src="/assets/images/products/wine_relax.png" alt="Product">
                                                 <div class="badge-corner">
-                                                    <img src="/assets/icons/thumbs_up.svg" alt="Icon"> 강력 추천
+                                                    <svg class="icon-thumbs-up" width="16" height="16"
+                                                        viewBox="0 0 16 16" fill="none"
+                                                        xmlns="http://www.w3.org/2000/svg">
+                                                        <path
+                                                            d="M5.21735 13.6669V5.66687L9.64035 1.26953L10.5467 2.17586L9.73768 5.66687H14.9993V8.18987L12.6813 13.6669H5.21735ZM1.66602 13.6669V5.66687H4.21735V13.6669H1.66602Z"
+                                                            fill="currentColor" />
+                                                    </svg> 강력 추천
                                                 </div>
                                                 <div class="delivery-tags">
                                                     <span class="tag tag-ambient"><svg class="icon-thermometer"
@@ -5346,7 +5352,13 @@
                                             <a href="#" class="card-thumb">
                                                 <img src="/assets/images/products/wine_relax.png" alt="Product">
                                                 <div class="badge-corner">
-                                                    <img src="/assets/icons/thumbs_up.svg" alt="Icon"> 강력 추천
+                                                    <svg class="icon-thumbs-up" width="16" height="16"
+                                                        viewBox="0 0 16 16" fill="none"
+                                                        xmlns="http://www.w3.org/2000/svg">
+                                                        <path
+                                                            d="M5.21735 13.6669V5.66687L9.64035 1.26953L10.5467 2.17586L9.73768 5.66687H14.9993V8.18987L12.6813 13.6669H5.21735ZM1.66602 13.6669V5.66687H4.21735V13.6669H1.66602Z"
+                                                            fill="currentColor" />
+                                                    </svg> 강력 추천
                                                 </div>
                                                 <div class="delivery-tags">
                                                     <span class="tag tag-ambient"><svg class="icon-thermometer"
@@ -5722,7 +5734,13 @@
                                             <a href="#" class="card-thumb">
                                                 <img src="/assets/images/products/wine_relax.png" alt="Product">
                                                 <div class="badge-corner">
-                                                    <img src="/assets/icons/thumbs_up.svg" alt="Icon"> 강력 추천
+                                                    <svg class="icon-thumbs-up" width="16" height="16"
+                                                        viewBox="0 0 16 16" fill="none"
+                                                        xmlns="http://www.w3.org/2000/svg">
+                                                        <path
+                                                            d="M5.21735 13.6669V5.66687L9.64035 1.26953L10.5467 2.17586L9.73768 5.66687H14.9993V8.18987L12.6813 13.6669H5.21735ZM1.66602 13.6669V5.66687H4.21735V13.6669H1.66602Z"
+                                                            fill="currentColor" />
+                                                    </svg> 강력 추천
                                                 </div>
                                                 <div class="delivery-tags">
                                                     <span class="tag tag-ambient"><svg class="icon-thermometer"
@@ -6098,7 +6116,13 @@
                                             <a href="#" class="card-thumb">
                                                 <img src="/assets/images/products/wine_relax.png" alt="Product">
                                                 <div class="badge-corner">
-                                                    <img src="/assets/icons/thumbs_up.svg" alt="Icon"> 강력 추천
+                                                    <svg class="icon-thumbs-up" width="16" height="16"
+                                                        viewBox="0 0 16 16" fill="none"
+                                                        xmlns="http://www.w3.org/2000/svg">
+                                                        <path
+                                                            d="M5.21735 13.6669V5.66687L9.64035 1.26953L10.5467 2.17586L9.73768 5.66687H14.9993V8.18987L12.6813 13.6669H5.21735ZM1.66602 13.6669V5.66687H4.21735V13.6669H1.66602Z"
+                                                            fill="currentColor" />
+                                                    </svg> 강력 추천
                                                 </div>
                                                 <div class="delivery-tags">
                                                     <span class="tag tag-ambient"><svg class="icon-thermometer"
@@ -6474,7 +6498,13 @@
                                             <a href="#" class="card-thumb">
                                                 <img src="/assets/images/products/wine_relax.png" alt="Product">
                                                 <div class="badge-corner">
-                                                    <img src="/assets/icons/thumbs_up.svg" alt="Icon"> 강력 추천
+                                                    <svg class="icon-thumbs-up" width="16" height="16"
+                                                        viewBox="0 0 16 16" fill="none"
+                                                        xmlns="http://www.w3.org/2000/svg">
+                                                        <path
+                                                            d="M5.21735 13.6669V5.66687L9.64035 1.26953L10.5467 2.17586L9.73768 5.66687H14.9993V8.18987L12.6813 13.6669H5.21735ZM1.66602 13.6669V5.66687H4.21735V13.6669H1.66602Z"
+                                                            fill="currentColor" />
+                                                    </svg> 강력 추천
                                                 </div>
                                                 <div class="delivery-tags">
                                                     <span class="tag tag-ambient"><svg class="icon-thermometer"
